Criado novas variáveis

--- a/assets/scss/_variaveis.scss
+++ b/assets/scss/_variaveis.scss
@@ -2,6 +2,8 @@
 
 $corPrincipal: red;
 $corSecundaria: #fff;
+$corBrackgroundPrincipal: #000;
+$corTerciaria: #9be9a8;
 
 $fontFamilyGeral: 'Sora', sans-serif;
 $fontFamilyTitulos: 'Chakra Petch', sans-serif;
