--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Sora:wght@300;400;500;600;700&display=swap");
+header {
+  height: 60px;
+}
+header #headerIcons a {
+  color: #fff;
+  transition: 120ms ease-in;
+}
+header #headerIcons a:hover {
+  color: #9be9a8;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +18,6 @@
 }
 
 body {
-  background-color: red !important;
+  background-color: #000 !important;
   color: #fff !important;
 }
