--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,32 @@ header #headerIcons a:hover {
   color: #9be9a8;
 }
 
+#banner {
+  font-family: "Chakra Petch", sans-serif;
+}
+#banner h1 span {
+  display: inline-block;
+}
+#banner h1 span::after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #9be9a8;
+  bottom: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Sora", sans-serif;
 }
 
 body {
   background-color: #000 !important;
   color: #fff !important;
+  font-family: "Sora", sans-serif !important;
 }
 
 .custom-tooltip .tooltip-inner {
